@@ -10,14 +10,12 @@ import java.io.File;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Locale;
 import java.util.Set;
 import java.util.concurrent.Executor;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 import net.minecraft.CrashReport;
 import net.minecraft.CrashReportCategory;
@@ -50,6 +48,7 @@ import net.minecraft.resources.ResourceLocation;
 import net.minecraft.sounds.Music;
 import net.minecraft.util.FormattedCharSequence;
 import net.minecraft.util.StringUtil;
+import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.TooltipFlag;
 import org.slf4j.Logger;
@@ -58,7 +57,7 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
    private static final Logger LOGGER = LogUtils.getLogger();
    private static final Set<String> ALLOWED_PROTOCOLS = Sets.newHashSet(new String[]{"http", "https"});
    private static final Component USAGE_NARRATION = Component.translatable("narrator.screen.usage");
-   protected static final CubeMap CUBE_MAP = new CubeMap(new ResourceLocation("nothingtoseeheremovealong", "textures/gui/title/background/panorama"));
+   protected static final CubeMap CUBE_MAP = new CubeMap(new ResourceLocation("textures/gui/title/background/panorama"));
    protected static final PanoramaRenderer PANORAMA = new PanoramaRenderer(CUBE_MAP);
    public static final ResourceLocation MENU_BACKGROUND = new ResourceLocation("textures/gui/menu_background.png");
    public static final ResourceLocation HEADER_SEPARATOR = new ResourceLocation("textures/gui/header_separator.png");
@@ -121,7 +120,7 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
    public void render(GuiGraphics var1, int var2, int var3, float var4) {
       this.renderBackground(var1, var2, var3, var4);
 
-      for(Renderable var6 : this.renderables) {
+      for (Renderable var6 : this.renderables) {
          var6.render(var1, var2, var3, var4);
       }
    }
@@ -134,7 +133,7 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
       } else if (super.keyPressed(var1, var2, var3)) {
          return true;
       } else {
-         Object var4 = switch(var1) {
+         Object var4 = switch (var1) {
             case 258 -> this.createTabEvent();
             default -> null;
             case 262 -> this.createArrowEvent(ScreenDirection.RIGHT);
@@ -240,7 +239,9 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
    }
 
    public static List<Component> getTooltipFromItem(Minecraft var0, ItemStack var1) {
-      return var1.getTooltipLines(var0.player, var0.options.advancedItemTooltips ? TooltipFlag.Default.ADVANCED : TooltipFlag.Default.NORMAL);
+      return var1.getTooltipLines(
+         Item.TooltipContext.of(var0.level), var0.player, var0.options.advancedItemTooltips ? TooltipFlag.Default.ADVANCED : TooltipFlag.Default.NORMAL
+      );
    }
 
    protected void insertText(String var1, boolean var2) {
@@ -376,7 +377,7 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
    }
 
    public static void renderMenuBackgroundTexture(GuiGraphics var0, ResourceLocation var1, int var2, int var3, float var4, float var5, int var6, int var7) {
-      boolean var8 = true;
+      byte var8 = 32;
       RenderSystem.enableBlend();
       var0.blit(var1, var2, var3, 0, var4, var5, var6, var7, 32, 32);
       RenderSystem.disableBlend();
@@ -404,13 +405,11 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
    }
 
    public static boolean hasControlDown() {
-      if (Minecraft.ON_OSX) {
-         return InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(), 343)
-            || InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(), 347);
-      } else {
-         return InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(), 341)
+      return Minecraft.ON_OSX
+         ? InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(), 343)
+            || InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(), 347)
+         : InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(), 341)
             || InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(), 345);
-      }
    }
 
    public static boolean hasShiftDown() {
@@ -465,10 +464,8 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
       int var5 = var1.indexOf(47);
       if (var2 == ':') {
          return (var5 == -1 || var3 <= var5) && var4 == -1;
-      } else if (var2 == '/') {
-         return var3 > var4;
       } else {
-         return var2 == '_' || var2 == '-' || var2 >= 'a' && var2 <= 'z' || var2 >= '0' && var2 <= '9' || var2 == '.';
+         return var2 == '/' ? var3 > var4 : var2 == '_' || var2 == '-' || var2 >= 'a' && var2 <= 'z' || var2 >= '0' && var2 <= '9' || var2 == '.';
       }
    }
 
@@ -545,8 +542,7 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
    }
 
    protected void updateNarratedWidget(NarrationElementOutput var1) {
-      List var2 = this.narratables.stream().filter(NarratableEntry::isActive).collect(Collectors.toList());
-      Collections.sort(var2, Comparator.comparingInt(TabOrderedElement::getTabOrderGroup));
+      List var2 = this.narratables.stream().filter(NarratableEntry::isActive).sorted(Comparator.comparingInt(TabOrderedElement::getTabOrderGroup)).toList();
       Screen.NarratableSearchResult var3 = findNarratableWidget(var2, this.lastNarratable);
       if (var3 != null) {
          if (var3.priority.isTerminal()) {
@@ -574,7 +570,7 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
       Screen.NarratableSearchResult var3 = null;
       int var4 = 0;
 
-      for(int var5 = var0.size(); var4 < var5; ++var4) {
+      for (int var5 = var0.size(); var4 < var5; var4++) {
          NarratableEntry var6 = (NarratableEntry)var0.get(var4);
          NarratableEntry.NarrationPriority var7 = var6.narrationPriority();
          if (var7.isTerminal()) {
@@ -623,14 +619,11 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
       return null;
    }
 
-   static record DeferredTooltipRendering(List<FormattedCharSequence> a, ClientTooltipPositioner b) {
-      private final List<FormattedCharSequence> tooltip;
-      private final ClientTooltipPositioner positioner;
-
-      DeferredTooltipRendering(List<FormattedCharSequence> var1, ClientTooltipPositioner var2) {
+   static record DeferredTooltipRendering(List<FormattedCharSequence> tooltip, ClientTooltipPositioner positioner) {
+      DeferredTooltipRendering(List<FormattedCharSequence> tooltip, ClientTooltipPositioner positioner) {
          super();
-         this.tooltip = var1;
-         this.positioner = var2;
+         this.tooltip = tooltip;
+         this.positioner = positioner;
       }
    }
 
